# igvc-auto-nav

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
fusion_node/: DrivableAreaController.py  RRTPathToGPSConverter.py  RRTStar.py  RobotLocalization.py  Utility.py  WaypointNavigator.py  __init__.py  fusion_node.py  robot_controller.py  waypoints.yaml  waypoints_prod.yaml  waypoints_test.yaml
fusion_node.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
install/: local_setup.sh  setup.sh
install/fusion_node/share/fusion_node/: package.bash  package.zsh
